[package]
name = "cue-splatter"
version = "0.1.0"
edition = "2021"

[dependencies]
chardet = "0.2.4"
encoding = "0.2.33"
rayon = "1.10"
indicatif = { version = "0.17", features = ["rayon", "improved_unicode"] }
argh = "0.1"
levenshtein = "1.0.5"
colour = "2.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols
