[package]
name = "cue-splatter"
version = "0.0.0"
edition = "2021"

[dependencies]
chardet = "0.2.4"# Detects the encoding of a byte stream
encoding = "0.2.33"# Character encoding support
rayon = "1.10"# Data parallelism library
indicatif = { version = "0.17", features = ["rayon", "improved_unicode"] } # Progress bar
argh = "0.1" # A simple argument parser
levenshtein = "1.0.5"# Levenshtein distance
colour = "2.0"# Terminal colours
lofty = "0.22.0" # En/decode audio file metadata
self_update = { version = "0.42.0", features = ["rustls"], default-features = false }
lazy_static = "1.5.0" # Self-updating binaries

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols
